--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-resource": "^1.2.0",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
